@@ -4,14 +4,16 @@
 	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
 	- Let eix-remote and KEEP_VIRTUAL=true use the original
 	  overlay label's (repo_name)
-	- Introduce --repo-name and REPO_NAMES to override defaults.
+	- Introduce --repo-name and REPO_NAMES
 	- eix-update: Treat eix-caches for the same file simultaneously.
 	  This dramatically speeds up KEEP_VIRTUALS=true
 	  When the first overlay accessing the file is displayed, actually
 	  all overlays are handled - the later ones only print a message.
 	- eix --pipe: Also accept leading "=", e.g. =sys-devel/gcc-4.4.2.
 	  Also accept several packages in one line (separated by spaces).
+	- Provide xml-scheme: eix-xml.xsd
 	- manpage: Give some useful examples at the very beginning.
+	- Fix xml-description (add description, homepage, missing_keyword)
 	- Fix ./configure --disable-security (regression of 0.19.0,
 	  was fixed by patch in eix-0.19.0-r1).
 	- Improve tests in case of --enable-security.
